fixed getRandomEnum for java 11